service/kafka-ui/k8s/base/route.yaml
# NOTE: security policy defined on gateway level
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-k8s-kafka
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https-k8s-kafka

  hostnames:
    - kafka.k8s.donation-app.local

  rules:
    - backendRefs:
        # kubernetees service
        - name: envoy-gateway-internal
          namespace: envoy-gateway-system
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: internal-k8s-kafka
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - kafka.k8s.donation-app.local

  rules:
    - backendRefs:
        # kubernetees service # TODO:
        - name: kafka-ui
          namespace: default
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: http-k8s-kafka-redirect
  namespace: cert-manager # HTTPRoute must be placed in same namespace as the target backend service
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http-k8s-kafka

  hostnames:
    - "kafka.k8s.donation-app.local"

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: "/.well-known/"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: "/livez"
      backendRefs:
        - name: cert-manager-health-endpoint
          namespace: cert-manager
          port: 80
